terraform/main.tf
# main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

# Security group for SSH access
resource "aws_security_group" "k3s_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2 instance for Kubernetes (k3s) - Ubuntu AMI
resource "aws_instance" "k3s_instance" {
  ami           = "ami-005fc0f236362e99f"  
  instance_type = "t2.micro"
#   subnet_id     = aws_subnet.public.id
#   security_groups = [aws_security_group.k3s_sg.name]
# Instead of using groupName, use vpc_security_group_ids
  vpc_security_group_ids = ["sg-03ac0f69e4f89fd2d"]  # Replace with your security group ID

  subnet_id = "subnet-03958a99bde233ec6"  # Make sure you have a valid subnet ID

  key_name = "my-terraform-key"

  user_data = <<-EOF
              #!/bin/bash
              sudo apt-get update -y
              sudo apt-get install -y curl
              curl -sfL https://get.k3s.io | sh -
            EOF

  tags = {
    Name = "k3s-instance"
  }
}

# EC2 instance for Jenkins and Docker - Ubuntu AMI
resource "aws_instance" "jenkins_instance" {
  ami           = "ami-005fc0f236362e99f"  
  instance_type = "t2.micro"
#   subnet_id     = aws_subnet.public.id
#   security_groups = [aws_security_group.k3s_sg.name]
# Instead of using groupName, use vpc_security_group_ids
  vpc_security_group_ids = ["sg-03ac0f69e4f89fd2d"]  # Replace with your security group ID

  subnet_id = "subnet-03958a99bde233ec6"  # Make sure you have a valid subnet ID
  
  key_name = "my-terraform-key"
  
  tags = {
    Name = "jenkins-instance"
  }
}

# Create an ECR repository for the Python app
resource "aws_ecr_repository" "python_app" {
  name = "python-app"
}
